force-app/main/default/objects/Archive_Audit__c.object
<CustomObject>
    <description>`Stores all data related to Archiving and Purging</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Saves the linkage between the record and the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Archive Audits</relationshipLabel>
        <relationshipName>Archive_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>Stores the archive date of the case</description>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact record related to the case being archived</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Archive Audits</relationshipLabel>
        <relationshipName>Archive_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purge_Date__c</fullName>
        <description>Stores the purge date of the case</description>
        <label>Purge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>Stores the record Id of the record being archived</description>
        <label>RecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Archive Audit</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Archive Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>